added phone and date

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -26,6 +26,16 @@
                                 <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="Email address" required>
                             </div>
 
+                            <div class="col-lg-6 col-6">
+                                <label for="phone" class="form-label">Phone <sup class="text-danger">*</sup></label>
+                                <input type="text" name="phone" id="phone" class="form-control" placeholder="Phone Number" required>
+                            </div>
+
+                            <div class="col-lg-6 col-6">
+                                <label for="date" class="form-label">Date <sup class="text-danger">*</sup></label>
+                                <input type="date" name="date" id="date" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="Current Date" required>
+                            </div>
+
                             <div class="col-12 my-4">
                                 <label for="message" class="form-label">How can we help?</label>
                                 <textarea name="message" rows="6" class="form-control" id="message" placeholder="Tell us about the project" required></textarea>                               
