--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,7 +13,8 @@
 
                     <h2 class="mb-4 text-center" data-aos="fade-up">Dont' be shy, write to us</h2>
 
-                    <form action="#" method="post" class="contact-form" role="form" data-aos="fade-up">
+                    <form  method="post" >
+                        {% csrf_token %}
                         <div class="row"> 
 
                             <div class="col-lg-6 col-6">
