--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
 
     </body>
 
-    
+{% comment %}     
 <footer class="site-footer">
     <div class="container">
         <div class="row">
@@ -86,5 +86,5 @@
     
         </div>
     </section>
-    </footer>
+    </footer> {% endcomment %}
 </html>
