--- a/templates/home.html
+++ b/templates/home.html
@@ -58,6 +58,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url "contact" %}">Contact Us</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url "messages" %}">Messages</a>
+                </li>
             </ul>
         </div>
     </div>
