--- a/templates/message_detail.html
+++ b/templates/message_detail.html
@@ -33,6 +33,7 @@ Messages
             <td>{{message.date}}</td>
             <td>
 
+                <a href="{% url "update" message.id  %}" class="btn btn-primary">Edit</a>
                 <a href="{% url "delete" message.id  %}" class="btn btn-danger">Delete</a>
     
             </td>
