--- a/templates/message_update.html
+++ b/templates/message_update.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
- Contact Page
+ Update Message
 {% endblock title %}
 
 {% block content %}
