--- a/templates/home.html
+++ b/templates/home.html
@@ -62,6 +62,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url "messages" %}">Messages</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url "accounts:register" %}">Register</a>
+                </li>
             </ul>
         </div>
     </div>
