--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
     <div class="overlay"></div>
 </section>
 
-<nav class="navbar navbar-expand-lg bg-light shadow-lg">
+{% comment %} <nav class="navbar navbar-expand-lg bg-light shadow-lg">
     <div class="container">
         <a class="navbar-brand" href="index.html">
             <strong>Nomad Force</strong>
@@ -69,7 +69,7 @@
             </ul>
         </div>
     </div>
-</nav>
+</nav> {% endcomment %}
 
 {% endblock content %}
 
