--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,52 @@
         <link href="{% static ".\assets\css\templatemo-nomad-force.css" %}" rel="stylesheet">
 
     </head>
+
+    <header>
+        <nav class="navbar navbar-expand-lg bg-light shadow-lg">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">
+                    <strong>Nomad Force</strong>
+                </a>
+        
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+        
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/">Home</a>
+                        </li>
+        
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url "about" %}">Our Studio</a>
+                        </li>
+        
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url "portfolio" %}">Portfolio</a>
+                        </li>
+        
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url "news" %}">News & Events</a>
+                        </li>
+        
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url "contact" %}">Contact Us</a>
+                        </li>
+        
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url "messages" %}">Messages</a>
+                        </li>
+        
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url "accounts:register" %}">Register</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     
     <body>
     
