--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -4,6 +4,15 @@
 {% endblock title %}
 
 {% block content %}
+
+<ul>
+    {% for message in messages %} 
+    <li style="color: {% if message.tags == 'error' %}red{% else %}green{% endif %};">
+        {{ message }}
+    </li>
+    {% endfor %}
+
+</ul>
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -26,6 +35,7 @@
         <span class="bg-light">OR</span>
     </p>
 	<form method="POST">
+		{% csrf_token %}
 	<div class="form-group input-group">
 		<div class="input-group-prepend">
 		    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
@@ -67,7 +77,7 @@
     <div class="form-group">
         <button type="submit" class="btn btn-primary btn-block"> Create Account  </button>
     </div> <!-- form-group// -->      
-    <p class="text-center">Have an account? <a href="">Log In</a> </p>                                                                 
+    <p class="text-center">Have an account? <a href="{% url "accounts:login" %}">Log In</a> </p>                                                                 
 </form>
 </article>
 </div> <!-- card.// -->
