--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url "accounts:register" %}">Register</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url "accounts:login" %}">Login</a>
+                        </li>
                     </ul>
                 </div>
             </div>
