--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -31,7 +31,7 @@
 		<div class="input-group-prepend">
 		    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
 		 </div>
-        <input name="" class="form-control" placeholder="Username" type="text">
+        <input name="username" id="username" class="form-control" placeholder="Username" type="text">
     </div> <!-- form-group// -->
 	
     
@@ -39,7 +39,7 @@
     	<div class="input-group-prepend">
 		    <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
 		</div>
-        <input class="form-control" placeholder="Enter password" type="password">
+        <input name="password" id="password" class="form-control" placeholder="Enter password" type="password">
     </div> <!-- form-group// -->
                                         
     <div class="form-group">
