--- a/templates/base.html
+++ b/templates/base.html
@@ -74,6 +74,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url "accounts:login" %}">Login</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url "accounts:upload_image" %}">Add Image</a>
+                        </li>
                     </ul>
                 </div>
             </div>
