--- a/templates/message_detail.html
+++ b/templates/message_detail.html
@@ -35,6 +35,7 @@ Messages
 
                 <a href="{% url "update" message.id  %}" class="btn btn-primary">Edit</a>
                 <a href="{% url "delete" message.id  %}" class="btn btn-danger">Delete</a>
+                <a href="{% url "update" message.id  %}" class="btn btn-primary">Edit</a>
     
             </td>
         </tr>
