--- a/templates/base.html
+++ b/templates/base.html
@@ -78,6 +78,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url "accounts:upload_image" %}">Add Image</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url "pay" %}">Pay</a>
+                        </li>
                     </ul>
                 </div>
             </div>
